# tic_tac_toe_rust

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/frontend/: mod.rs
src/frontend/console/: mod.rs  players.rs  renderers.rs
src/frontends/console/: mod.rs  players.rs  renderers.rs
src/game/: engine.rs  minimax.rs  mod.rs  players.rs  renderers.rs
src/game/players/: minimax.rs  mod.rs  random.rs
src/logic/: errors.rs  mod.rs  models.rs  validators.rs
src/logic/models/: cell.rs  game_move.rs  game_state.rs  gamestate.rs  grid.rs  mark.rs
