[package]
name = "tic_tac_toe_rust"
version = "0.4.0"
edition = "2021"
description = "A simple tic tac toe game with a minimax ai"
repository = "https://github.com/jungersa/tic_tac_toe_rust"
license = "MIT"
keywords = ["tic-tac-toe", "minimax", "ai", "cli"]
categories = ["games"]
readme = "README.md"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
thiserror = "1.0"
